--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,186 @@
 .App {
-  text-align: center;
+  background-color: #030835;
+  padding: 40px 60px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App-Header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.App-Header-Date-Weather {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Date-Weather-Text {
+  font-family: var(--font-date);
+  font-size: 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.weather-information {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.weather-temperature {
+  position: relative;
+  font-family: var(--font-date);
+  font-size: 16px;
+  margin-left: 20px;
+}
+
+.weather-tooltip {
+  position: absolute;
+  top: 100px;
+  right: 60px;
+
+  background-color: #fff;
+  padding: 20px;
+  transition: 150ms;
+}
+
+.weather-tooltip p {
+  font-family: var(--font-date);
+  font-size: 10px;
+  color: #000;
+}
+
+.Tabs-Container {
+  display: flex;
+  margin-top: 50px;
+}
+
+.personalTab {
+  transition: 250ms;
+}
+
+.personalTab:hover {
+  background-color: var(--beige);
+  color: #000;
+}
+
+.tab-component {
+  background: var(--white);
+  color: #000;
+  margin-right: 20px;
+  padding: 5px 24px;
+  border-radius: 15px;
+  transition: 150ms;
+  font-family: var(--font-tabs);
+  font-size: var(--fs-tabs);
+  cursor: pointer;
+  transition: 150ms;
+}
+
+.tab-component:hover {
+  background: var(--beige);
+}
+
+.header-logo {
+  font-family: var(--font-logo);
+  color: var(--white);
+  font-size: 40px;
+}
+
+.tab-hover-green {
+  transition: 150ms;
+}
+
+.tab-hover-green:hover {
+  background-color: var(--green);
+}
+
+.personalTab {
+  background-color: aliceblue;
+}
+
+.panelContainer {
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  margin-top: 60px;
+}
+
+.panelBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-right: 30px;
+  cursor: pointer;
+}
+
+.panel {
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 10px;
+  transition: 200ms;
+}
+
+.panel:hover {
+  /* background: red; */
+  transform: scale(1.018);
+  background: #e6e6e6;
+}
+
+.panelIcon {
+  width: 50px;
+  height: 50px;
+}
+
+.panelText {
+  font-family: var(--font-main);
+  font-size: 14px;
+  margin-top: 10px;
+}
+
+/* Discover || News */
+body::-webkit-scrollbar:horizontal {
+  display: none;
+}
+
+.discovery-panel {
+  margin-top: 60px;
+
+  /* prevent overflowing */
+}
+
+.discovery-panel h1 {
+  margin-bottom: 20px;
+}
+
+.news-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.news-item {
+  /* width: auto; */
+  max-height: 215px;
+  /* overflow-y: hidden; */
+  padding: 5px;
+  margin-right: 30px;
+  cursor: pointer;
+  transition: 150ms;
+}
+
+.news-item:hover {
+  transform: scale(1.018);
+  background-color: rgba(247, 247, 247, 0.2);
+}
+
+.news-image {
+  /* width: 180px;
+  height: 120px; */
+  aspect-ratio: 4 / 3;
+}
+
+.news-source {
+  font-size: 10px;
 }
