--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,15 @@
 .App {
   background-color: #030835;
-  padding: 40px 60px;
+  /* padding: 40px 60px; */
+  overflow-x: hidden;
 }
 
 .App-Header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 40px 60px 0 60px;
+
 }
 
 .App-Header-Date-Weather {
@@ -54,6 +57,8 @@
 .Tabs-Container {
   display: flex;
   margin-top: 50px;
+  padding: 0px 60px;
+
 }
 
 .personalTab {
@@ -98,6 +103,7 @@
 
 .personalTab {
   background-color: aliceblue;
+  
 }
 
 .panelContainer {
@@ -105,6 +111,7 @@
   /* justify-content: center; */
   align-items: center;
   margin-top: 60px;
+  padding: 0px 60px;
 }
 
 .panelBox {
@@ -141,33 +148,43 @@
 }
 
 /* Discover || News */
-body::-webkit-scrollbar:horizontal {
-  display: none;
-}
-
 .discovery-panel {
   margin-top: 60px;
-
-  /* prevent overflowing */
+  /* text-indent: 60px; */
+  /* margin-left: 60px; */
 }
 
 .discovery-panel h1 {
   margin-bottom: 20px;
 }
 
+#discovery-panel-title {
+  margin-left: 60px;
+}
+
 .news-container {
   display: flex;
   flex-direction: row;
+  padding-left: 60px;
+  width: 100%;
+  overflow-x: scroll;
+  scroll-behavior: smooth;
+}
+
+.news-container::-webkit-scrollbar {
+  display: none;
 }
 
 .news-item {
-  /* width: auto; */
-  max-height: 215px;
-  /* overflow-y: hidden; */
+  max-height: 230px;
   padding: 5px;
   margin-right: 30px;
   cursor: pointer;
   transition: 150ms;
+
+  /* overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis; */
 }
 
 .news-item:hover {
@@ -176,11 +193,25 @@ body::-webkit-scrollbar:horizontal {
 }
 
 .news-image {
-  /* width: 180px;
-  height: 120px; */
-  aspect-ratio: 4 / 3;
+  width: 180px;
+  height: 130px;
+  aspect-ratio: auto 4 / 3;
 }
 
 .news-source {
   font-size: 10px;
+}
+
+.news-headline-container {
+  /* overflow: hidden; */
+  width: 100%;
+}
+
+.news-article-title {
+  /* makes multi-line (3 lines) of text first then apply ellipsis to text */
+  width: 100%;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
